--- a/lib/jarbundler-2.2.0/dox/DocumentType.html
+++ b/lib/jarbundler-2.2.0/dox/DocumentType.html
@@ -1,3 +1,5 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+        "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
   <title>Mac OS X JarBundler ANT Task - DocumentType Nested Task</title>
@@ -38,8 +40,8 @@ key.
 <table border="1" cellpadding="4" cellspacing="0" width="90%" style="font-size: 10pt;">
 
   <tr>
-    <th>Attribute</td>
-    <th>Description</td>
+    <th>Attribute</th>
+    <th>Description</th>
   </tr>
 
   <tr>
