--- a/lib/jarbundler-2.2.0/dox/Examples.html
+++ b/lib/jarbundler-2.2.0/dox/Examples.html
@@ -1,3 +1,5 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+        "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
 <title>Mac OS X JarBundler - Advanced Examples</title>
@@ -108,7 +110,7 @@
                      
   &lt;/jarbundler&gt;
     
-</target>
+&lt;/target&gt;
 
 </pre>
 
